# Mycelium

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Mycelium Developer Experience & Product Testimonial (Responses).xlsx  PLAN.md  PROOF_SYSTEM.md  README.md  ROADMAP.md  a2a_demo.py  claude.md  cli.md  escrow_contract.py  firestore.indexes.json  hive_registry.py  job_board_contract.py  memory_anchor.py  memory_demo.py  mycelium.toml  pitch_deck_prompt.md  plan.md  pytest.ini  render.yaml  requirements.txt  sdk.md  start.sh
cli/: README.md  pyproject.toml  requirements.txt
cli/mycelium_cli/: __init__.py  config.py  main.py
cli/mycelium_cli/commands/: __init__.py  agent.py  call.py  check.py  compile.py  deal.py  deploy.py  discover.py  doctor.py  events.py  fund.py  init.py  jobs.py  memory.py  newwallet.py  pay.py  register.py  resolve.py  run.py  status.py  test.py  update.py  verifier.py
cli/tests/: test_agent.py  test_cli.py
compiler/: Dockerfile  README.md  pyproject.toml  requirements.txt
compiler/Benchmark/contracts/: 02_erc20_token.py  03_ownable.py  04_eth_vault.py  05_multisig.py  08_pausable.py  100_gov_alpha.py  13_vesting.py  15_dao.py  16_nft_registry.py  17_lottery.py  18_marketplace.py  19_lending.py  21_payment_channel.py  22_registry.py  23_subscription.py  26_liquidity_pool.py  27_flash_loan.py  31_splitter.py  32_simple_escrow.py  34_yield_farm.py  35_bridge.py  36_nft_auction.py  38_multi_vesting.py  39_lp_locker.py  41_insurance.py  44_stablecoin.py  45_flash_mint.py  47_dispute_escrow.py  48_merkle_airdrop.py  50_bonding_curve.py  53_shared_wallet.py  54_donation.py  55_reward_pool.py  56_flash_swap.py  58_token_timelock.py  59_auto_compounder.py  60_dynamic_nft.py  61_proxy_registry.py  63_fixed_sale.py  64_bonus_crowdsale.py  (+17 more)
compiler/Benchmark/mycelium-contracts/auction/: batch_auction.py  reverse_auction.py  sealed_bid_auction.py  vickrey_auction.py
compiler/Benchmark/mycelium-contracts/bridge/: atomic_swap.py  relay_bridge.py  state_sync_bridge.py  token_bridge.py
compiler/Benchmark/mycelium-contracts/dao/: constitutional_dao.py  hiring_dao.py  investment_dao.py  moloch_dao.py  treasury_dao.py
compiler/Benchmark/mycelium-contracts/defi/: amm_constant_product.py  dollar_cost_averaging.py  fee_distributor.py  flash_loan_provider.py  order_book_dex.py  stableswap_amm.py  yield_aggregator.py
compiler/Benchmark/mycelium-contracts/derivatives/: index_token.py  interest_rate_swap.py  options_contract.py  variance_swap.py
compiler/Benchmark/mycelium-contracts/gaming/: achievement_system.py  game_economy.py  game_item_system.py  land_registry.py  leaderboard.py  loot_box.py  tournament_system.py
compiler/Benchmark/mycelium-contracts/governance/: delegation_registry.py  futarchy_governance.py  quadratic_voting.py
compiler/Benchmark/mycelium-contracts/identity/: attestation_service.py  credential_verifier.py  name_service.py  social_recovery.py
compiler/Benchmark/mycelium-contracts/insurance/: catastrophe_bond.py  crop_insurance.py  insurance_pool.py  reinsurance.py
compiler/Benchmark/mycelium-contracts/launchpad/: bonding_curve_launch.py  fair_launch.py  ido_launchpad.py  liquidity_generation.py  retroactive_airdrop.py
compiler/Benchmark/mycelium-contracts/lending/: credit_delegation.py  interest_rate_model.py  isolated_lending_pair.py  leveraged_lending.py  liquidation_engine.py  nft_collateral_lending.py  peer_to_peer_lending.py
compiler/Benchmark/mycelium-contracts/nft/: dynamic_nft.py  multi_token.py  music_royalty_nft.py  nft_collection_factory.py  nft_core.py  nft_rental.py
compiler/Benchmark/mycelium-contracts/oracle/: chainlink_adapter.py  compute_oracle.py  sports_oracle.py  (+3 more)
compiler/mycelium_compiler/: __init__.py  codegen.py  main.py  parser.py  types.py  validator.py
compiler/mycelium_compiler/codegen/: __init__.py  core.py  inferrer.py  transpiler.py  utils.py
compiler/scripts/: build_all_contracts.py  compile_batch.py  run_stress_tests.py
compiler/tests/: test_compiler.py
mycelium/: README.md  __init__.py  constants.py  pyproject.toml  types.py
sdk/: README.md  pyproject.toml  requirements.txt
sdk/mycelium_sdk/: __init__.py  agent_loop.py  banner.py  client.py  constants.py  context.py  contract_client.py  crypto.py  events.py  hive.py  indexer_client.py  jobs.py  logging.py  models.py  rpc.py  scaffold.py  scval.py  spec.py
sdk/mycelium_sdk/adapters/: __init__.py  anthropic.py  gemini.py  langgraph.py
sdk/mycelium_sdk/contracts/: escrow.wasm
sdk/mycelium_sdk/memory/: __init__.py  agent_memory.py  anchor.py  backends.py
sdk/mycelium_sdk/proof/: __init__.py  evidence.py  judge.py  panel.py  providers.py  registry.py  reputation.py  rubric.py  verdict.py  worker.py
sdk/mycelium_sdk/x402/: __init__.py  settlement.py
sdk/tests/: __init__.py  test_adapters.py  test_agent_loop.py  test_banner.py  test_context.py  test_contract_client.py  test_crypto.py  test_events.py  test_hive.py  test_jobs.py  test_live_testnet.py  test_memory.py  test_proof.py  test_rpc_resilience.py  test_spec.py  test_x402.py
(+409 files in other folders)
