[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mycelium-compiler"
version = "0.2.0"
description = "Mycelium Python-to-Soroban-WASM compiler"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["mycelium_compiler*"]
