[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mycelium-sdk"
version = "0.3.0"
description = "Mycelium on-chain agent SDK (signing, contract calls, hive discovery, x402)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "stellar-sdk>=14,<15",
    "cryptography>=42",
    "requests>=2.31",
]

[project.optional-dependencies]
langgraph = ["langgraph", "langchain-core"]
gemini = ["google-generativeai"]
anthropic = ["anthropic"]

[tool.setuptools.packages.find]
include = ["mycelium_sdk*"]

[tool.setuptools.package-data]
# Bundle the compiled escrow contract so x402.create_locked_escrow can deploy it.
mycelium_sdk = ["contracts/*.wasm"]
